k8s/keycloak/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: http
